Typo fix and otherwise

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -172,6 +172,12 @@ Millennium Dawn voice lines:
 'Taruguete' Spanish voicelines
 'Harsh Vasudatta Thakur' Hindi voicelines
 'AlpArslan' Turkish voicelines
+'Flam' Portugal Portuguese
+'Albertaso01' for Mexican Spanish voicelines
+'Khaled' for Kuwaiti Arabic voicelines
+'Augustus Honk IV' for Greek voicelines
+'WiggityFidgetty' for Australian voicelines
+
 
 3D Models
 Camo pack by Jeff Kleinzweig.
