--- a/localisation/russian/equipment_l_russian.yml
+++ b/localisation/russian/equipment_l_russian.yml
@@ -328,8 +328,8 @@
  Anti_Air_4_desc: "Переносные зенитно-ракетные комплексы представляют собой ракетные пусковые установки класса 'земля-воздух', запускаемые с плеча. Поскольку потребность в переносном весе накладывает жесткие ограничения на размеры ракет, они представляют собой системы малого радиуса действия. Таким образом, они представляют угрозу для низколетящих самолетов и смертельны для вертолетов."
  SP_Anti_Air_4: "ЗРК 2035 года"
  SP_Anti_Air_4_desc: "Системы противовоздушной обороны, установленные на транспортных средствах малой дальности, могут использовать ракеты большей дальности и, следовательно, дальнего радиуса действия, чем ПЗРК, что представляет угрозу для всех самолетов. Они также могут нести больше ракет. Такие противовоздушные системы организованы в специальные батареи и батальоны ПВО."
- 
- 
+
+
  nsb_Anti_Air_0: "ПЗРК 1965 года"
  nsb_Anti_Air_0_desc: "Переносные зенитные ракетные комплексы (ПЗРК) представляют собой наплечные пусковые установки ракет класса "земля-воздух". Поскольку потребность в переносном весе накладывает жесткие ограничения на размеры ракет, они являются системами малой дальности. Поэтому они представляют угрозу для низколетящих самолетов и смертельны для вертолетов."
  nsb_SP_Anti_Air_0: "ЗРК МС 1965 года"
@@ -816,7 +816,7 @@
  BLR_MBT_4_short: "T-90"
  BLR_MBT_5: "OB-477"
  BLR_MBT_5_short: "OB-477"
- 
+
  BLR_Anti_tank_0: "RPG-7"
  BLR_Anti_tank_0_desc: "Used in many wars and on many vehicles."
  BLR_Anti_tank_1: "AT-4 Fagot"
@@ -1087,7 +1087,7 @@
  CAN_infantry_weapons2:0 "C7"
  CAN_infantry_weapons_2_desc: "A licensed version of the Colt M16 platform with several Canadian requested features which resulted in a rifle similar to a M16A2 but with M16A1 rear sights and the capibility for fully automatic fire.
  CAN_infantry_weapons3:0 "C7A1"
- CAN_infantry_weapons_3_desc: "The C7A1 replaces the iron sight/carrying handle assembly used on the C7 with a modified Weaver rail for mounting optics. The mount can use traditional iron sights or the ELCAN C79 Optical Sight 3.4×28 optical sight." 
+ CAN_infantry_weapons_3_desc: "The C7A1 replaces the iron sight/carrying handle assembly used on the C7 with a modified Weaver rail for mounting optics. The mount can use traditional iron sights or the ELCAN C79 Optical Sight 3.4×28 optical sight."
  CAN_infantry_weapons4:0 "C7A2"
  CAN_infantry_weapons_4_desc: "With Canadian involvement in Afghanistan, Diemaco and the Canadian Forces developed improvements to the C7A1 to better suit the operational situations at hand. The result, the C7A2, has a four-point telescoping stock unit and a three-rail TRIAD that is clamped on the front sight base to allow accessories to be attached. The selector lever, magazine release, and charging handle latch became ambidextrous."
  CAN_infantry_weapons5:0 "C8A3"
@@ -1097,7 +1097,7 @@
  CAN_infantry_weapons7:0 "CMAR"
  CAN_infantry_weapons_7_desc: "The Canadian Modular Assault Rifle is a further set of upgrades to the C8A4, focusing on varible optics, better ergonomics, and an improved ability to tailor the weapon to the operator."
 
- 
+
  CAN_APC_2:0 "LAV-I AVGP"
  CAN_APC_2_desc:0 "In 1974 the Canadian army selected the Swiss vehicle Mowag Piranha 6x6. Production of the vehicle was taken over under license by the Canadian company Diesel Division, a division of General Motors of Canada."
  CAN_APC_2_short:0 "LAV-I AVGP"
@@ -1111,7 +1111,7 @@
  CAN_APC_5_desc:0 "The final upgrade of the LAV III to LAV 6.0 standards, while maintaining a higher roof line for infantry or cargo transport. The upgrades increased protection including better electronics, IED protection, and addon armour while maintaining a machine gun armed Protector remotely controlled weapon station."
  CAN_APC_5_short:0 "LAV-6 ACSV"
 
- 
+
  CAN_ENGI_MBT_1:0 "Bergepanzer 1"
  CAN_ENGI_MBT_1_short:0 "BPz1"
  CAN_ENGI_MBT_2:0 "Bergepanzer 2"
@@ -1120,7 +1120,7 @@
  CAN_ENGI_MBT_4_short:0 "BPz3"
  CAN_ENGI_MBT_5:0 "Leopard Kodiak"
  CAN_ENGI_MBT_5_short:0 "Kodiak"
- 
+
  CAN_MBT_1:0 "Centurion"
  CAN_MBT_1_short:0 "Centurion"
  CAN_MBT_1_desc:0 "When it first came out, the Centurion's design was revolutionary in pioneering the model for early main battle tanks. Designed and produced at the closing stages of the Second World War, the Centurion only saw service in the post-war periods but it quickly became the West's answer to the Soviet's T-54 tanks. Until the early 1970s, the Centurion tanks formed the bulk of the Canadian tank force."
@@ -1139,22 +1139,22 @@
 
  CAN_IFV_1:0 "CTL Bobcat"
  CAN_IFV_1_desc:0 "The Bobcat project begun in 1952 as a logical development to replace the wartime Ram Kangaroo APC and correct for the faults of that converted tank. Amendments to the concept proceeded over the next four years as the concept swung between an amphibious fully armored carrier and a modernized replacement for the Universal Carrier."
- CAN_IFV_1_short:0 "CTL Bobcat" 
+ CAN_IFV_1_short:0 "CTL Bobcat"
  CAN_IFV_2:0 "Grizzly AVGP"
  CAN_IFV_2_desc:0 "In 1974 the Canadian army selected the Swiss vehicle Mowag Piranha 6x6. Production of the vehicle was taken over under license by the Canadian company Diesel Division, a division of General Motors of Canada. The Grizzly variant used a Cadillac-Gage 1m turret."
- CAN_IFV_2_short:0 "Grizzly AVGP" 
+ CAN_IFV_2_short:0 "Grizzly AVGP"
  CAN_IFV_3:0 "LAV-III Kodiak"
  CAN_IFV_3_desc:0 "The LAV III is the third generation of the Light Armoured Vehicle (LAV) family of armored personnel carriers built by General Dynamics Land Systems – Canada (GDLS-C), a London, Ontario, based subsidiary of General Dynamics. It first entered service in 1999, it is the primary mechanized infantry vehicle of both the Canadian Army and the New Zealand Army.
- CAN_IFV_3_short:0 "LAV-III Kodiak" 
+ CAN_IFV_3_short:0 "LAV-III Kodiak"
  CAN_IFV_4:0 "LAV-III LORIT"
  CAN_IFV_4_desc:0 "An upgraded version of the LAV III with newer turrets and electronics, increased IED protection, and addon armour conducted under the LAV Operational Requirement Inegration Task (LORIT)."
- CAN_IFV_4_short:0 "LAV-III LORIT" 
+ CAN_IFV_4_short:0 "LAV-III LORIT"
  CAN_IFV_5:0 "LAV-6 IFV"
  CAN_IFV_5_desc:0 "The final upgrade of the LAV III to LAV 6.0 standards. The upgrades increased protection including new turrets, better electronics, increased IED protection, and addon armour while utilizing a turret armed with a 25mm chain gun and coaxial GPMG similar to the original LAV III."
- CAN_IFV_5_short:0 "LAV-6 IFV" 
+ CAN_IFV_5_short:0 "LAV-6 IFV"
 
- 
- 
+
+
 
  CAN_Rec_tank_1:0 "M113 CV Lynx"
  CAN_Rec_tank_1_short:0 "While similar in appearance to the original M113, the CV was modified heavily for command and reconnaissance. The troop compartment was completely removed. The same 6 cylinder General Motors engine which was on the M113 was placed at the rear. While the suspension from the M113 was kept, one roadwheel was eliminated, leaving only four on each side."
@@ -1166,8 +1166,8 @@
  CAN_Rec_tank_3_short:0 "The LAV II Coyote is an 8x8 wheeled armored vehicle manufactured by General Motors, now General Dynamics. This vehicle was designed for use in reconnaissance missions and is based on LAV-25. The surveillance assests include surface surveillance radar and an electro-optical/infrared surveillance system with a long-range video camera and laser rangefinder. The surveillance systems can detect tank-sized targets at up to 12 kilometres away, and large truck-sized targets at up to 24 kilometres."
  CAN_Rec_tank_3_short:0 "LAV-II Coyote"
 
- 
- CAN_util_vehicle_0:0 "M38A1 CDN" 
+
+ CAN_util_vehicle_0:0 "M38A1 CDN"
  CAN_util_vehicle_1:0 "Iltis"
  CAN_util_vehicle_2:0 "LSVW"
  CAN_util_vehicle_3:0 "G-Wagon"
@@ -1176,10 +1176,10 @@
  CAN_util_vehicle_6:0 "Senator APC"
  CAN_util_vehicle_7:0 "Senator MRAP"
 
- 
+
  CAN_Anti_tank_0:0 "Carl Gustav M3"
  CAN_Anti_tank_1:0 "Eryx"
- 
+
  CAN_artillery_0:0 "GC-45"
  CAN_artillery_1:0 "L118 Light Gun"
  CAN_artillery_2:0 "M777 Howitzer"
@@ -2015,7 +2015,7 @@
  GER_IFV_8_short: "Cougar KF-73"
  GER_IFV_8_desc: "Cougar KF-73 - это будущая разработка в области БМП. Cougar - это модернизированная и более крупная машина, созданная на базе Lynx KF-41. Cougar имеет более мощное и бронированное шасси, оснащенное броней ERA (Explosive Reactive Armour). Cougar также оснащен 82-мм пушкой, 40-мм автопушкой, коаксиальным MG4 и системами ПТУР. Помимо высокой боевой эффективности, Cougar обладает отличной оборонительной мощью и хорошо защищен системой активной защиты нового поколения. "
 
- 
+
  GER_Anti_tank_0: "Panzerfaust 3"
  GER_Anti_tank_0_desc: "Panzerfaust 3 - современное полубронебойное безоткатное противотанковое оружие, разработанное в 1978-1985 гг. и впервые поступившее на вооружение бундесвера в 1987 году. Оно было заказано для того, чтобы обеспечить западногерманскую пехоту эффективным оружием против современной советской бронетехники и тем самым заменить устаревшие западногерманские пусковые установки PzF 44 Light Lanze."
  GER_Anti_tank_1: "MILAN"
@@ -3204,7 +3204,7 @@
  NKO_Amph_APC_4: "M-2010 Chunma-D"
 
  NKO_Heavy_Anti_tank_0: "Susong-Po"
- NKO_Heavy_Anti_tank_1: "MLTB Konkurs"
+ NKO_Heavy_Anti_tank_1: "MTLB Konkurs"
  NKO_Heavy_Anti_tank_1_desc: "Более тяжелая ракетная система, стреляющая более чем одним снарядом. «Конкурс» может поражать цели на расстоянии 4 км и уничтожать самые большие танки противника."
  NKO_Heavy_Anti_tank_2: "T-55 AT"
  NKO_Heavy_Anti_tank_3: "Volk AT-22"
@@ -3265,7 +3265,7 @@
  NKO_SP_arty_2: "Koksan M-1989 170 mm"
  NKO_SP_arty_3: "Koksan M-2025"
  NKO_SP_arty_4: "Koksan M-2035"
- 
+
  NKO_spart_equipment_0: "2S3 Akatsiya"
  NKO_spart_equipment_1: "Koksan M-1978 170 mm"
  NKO_spart_equipment_2: "Koksan M-1989 170 mm"
@@ -3632,7 +3632,7 @@
  POL_util_vehicle_6: "MRAP 'Lew'"
  POL_util_vehicle_7: "MRAP 'Lew' M2"
  POL_util_vehicle_8: "AMZ Żubr"
- 
+
  ### Poland Air Force ###
  ### Helicopters ###
  POL_early_helicopter: "СМ-1"
@@ -9896,7 +9896,7 @@
  FRA_awacs_equipment_2: "Northrop Grumman E-10 MC2A"
  FRA_cv_awacs_equipment_1: "E-2 Hawkeye"
  FRA_cv_awacs_equipment_2: "E-2D Advanced Hawkeye"
- 
+
  GER_awacs_equipment_1: "Boeing E-3A Sentry"
  GER_awacs_equipment_1_desc: "The Boeing E-3A Sentry is an airborne early warning and control (AEW&C) aircraft developed by Boeing. E-3s are commonly known as AWACS (Airborne Warning and Control System). Derived from the Boeing 707 airliner, it provides long-range all-weather surveillance, command, control, and communications."
  GER_cv_awacs_equipment_1: "P-3C Orion"
@@ -9953,7 +9953,7 @@
  UKR_awacs_equipment_2: "Beriev A-60"
  UKR_cv_awacs_equipment_1: "Yakolev Yak-33"
  UKR_cv_awacs_equipment_2: "Yakovlev Yak-44"
- 
+
  SMA_infantry_weapons: "M14"
  SMA_infantry_weapons_desc: "The M14 rifle, officially the United States Rifle, Caliber 7.62 mm, M14, is an American select-fire rifle that fires 7.62×51mm NATO (.308 in) ammunition. It became the standard-issued rifle for the U.S. military in 1959 replacing the M1 Garand rifle in the U.S. Army by 1961."
 
